Bugfix 6: Background and Alignment fix

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --text-dark: #2c3e3f;
     --text-light: #5a6d6e;
     --accent-teal: #1a3e47;
+    --border-orange: #5f2f1b;
     --accent-orange: #d4734a;
     --border-light: #d4c9bb;
     --paper-bg: #f5f0e8;
@@ -142,7 +143,19 @@ body {
 
 .random-button:hover {
     border-color: var(--border-dark);
-    background-color: var(--border-light);
+    background-color: var(--text-light);
+    transition: 0.2s;
+}
+
+.print-button {
+    color: var(--paper-bg);
+    background-color: var(--accent-teal);
+    border-color: var(--bg-darker);
+}
+
+.print-button:hover {
+    border-color: var(--border-orange);
+    background-color:var(--accent-orange);
     transition: 0.2s;
 }
 
